--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ click==8.0.3
 colorama==0.4.4
 # command-not-found==0.3
 cryptography==3.4.8
-cupshelpers==1.0
+# cupshelpers==1.0
 dbus-python==1.2.18
 distro==1.7.0
-distro-info==1.1+ubuntu0.2
+# distro-info==1.1+ubuntu0.2
 Django==4.2.1
 django-extensions==3.2.1
 fuse-python==1.0.2
@@ -18,7 +18,7 @@ httplib2==0.20.2
 importlib-metadata==4.6.4
 jeepney==0.7.1
 keyring==23.5.0
-language-selector==0.1
+# language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
@@ -50,10 +50,10 @@ ssh-import-id==5.11
 systemd-python==234
 tornado==6.1
 tzdata==2023.3
-ubuntu-drivers-common==0.0.0
+# ubuntu-drivers-common==0.0.0
 ubuntu-pro-client==8001
 ufw==0.36.1
-unattended-upgrades==0.1
+# unattended-upgrades==0.1
 usb-creator==0.3.7
 wadllib==1.3.6
 xkit==0.0.0
