--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ distro==1.7.0
 # distro-info==1.1+ubuntu0.2
 Django==4.2.1
 django-extensions==3.2.1
-fuse-python==1.0.2
+# fuse-python==1.0.2
 gpg==1.16.0
 httplib2==0.20.2
 importlib-metadata==4.6.4
